uppercase, fix spacing

--- a/public/css/aleo.css
+++ b/public/css/aleo.css
@@ -1,11 +1,11 @@
 /* Normal */
 @font-face {
-  font-family: 'aleo';
+  font-family: 'Aleo';
   src: url('../font/aleo/aleo-regular-webfont.eot');
   src: url('../font/aleo/aleo-regular-webfont.eot?#iefix') format('embedded-opentype'),
-     url('../font/aleo/aleo-regular-webfont.woff') format('woff'),
-     url('../font/aleo/aleo-regular-webfont.ttf') format('truetype'),
-     url('../font/aleo/aleo-regular-webfont.svg#aleoregular') format('svg');
+    url('../font/aleo/aleo-regular-webfont.woff') format('woff'),
+    url('../font/aleo/aleo-regular-webfont.ttf') format('truetype'),
+    url('../font/aleo/aleo-regular-webfont.svg#aleoregular') format('svg');
   font-weight: 500;
   font-style: normal;
 
@@ -13,12 +13,12 @@
 
 /* Bold */
 @font-face {
-  font-family: 'aleo';
+  font-family: 'Aleo';
   src: url('../font/aleo/aleo-bold-webfont.eot');
   src: url('../font/aleo/aleo-bold-webfont.eot?#iefix') format('embedded-opentype'),
-     url('../font/aleo/aleo-bold-webfont.woff') format('woff'),
-     url('../font/aleo/aleo-bold-webfont.ttf') format('truetype'),
-     url('../font/aleo/aleo-bold-webfont.svg#aleobold') format('svg');
+    url('../font/aleo/aleo-bold-webfont.woff') format('woff'),
+    url('../font/aleo/aleo-bold-webfont.ttf') format('truetype'),
+    url('../font/aleo/aleo-bold-webfont.svg#aleobold') format('svg');
   font-weight: 700;
   font-style: normal;
 }
@@ -28,45 +28,45 @@
   font-family: 'aleoitalic';
   src: url('../font/aleo/aleo-italic-webfont.eot');
   src: url('../font/aleo/aleo-italic-webfont.eot?#iefix') format('embedded-opentype'),
-     url('../font/aleo/aleo-italic-webfont.woff') format('woff'),
-     url('../font/aleo/aleo-italic-webfont.ttf') format('truetype'),
-     url('../font/aleo/aleo-italic-webfont.svg#aleoitalic') format('svg');
+    url('../font/aleo/aleo-italic-webfont.woff') format('woff'),
+    url('../font/aleo/aleo-italic-webfont.ttf') format('truetype'),
+    url('../font/aleo/aleo-italic-webfont.svg#aleoitalic') format('svg');
   font-weight: 500;
   font-style: italic;
 }
 
 /* Bold Italic */
 @font-face {
-  font-family: 'aleo';
+  font-family: 'Aleo';
   src: url('../font/aleo/aleo-bolditalic-webfont.eot');
   src: url('../font/aleo/aleo-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-     url('../font/aleo/aleo-bolditalic-webfont.woff') format('woff'),
-     url('../font/aleo/aleo-bolditalic-webfont.ttf') format('truetype'),
-     url('../font/aleo/aleo-bolditalic-webfont.svg#aleobolditalic') format('svg');
+    url('../font/aleo/aleo-bolditalic-webfont.woff') format('woff'),
+    url('../font/aleo/aleo-bolditalic-webfont.ttf') format('truetype'),
+    url('../font/aleo/aleo-bolditalic-webfont.svg#aleobolditalic') format('svg');
   font-weight: 700;
   font-style: italic;
 }
 
 /* Light */
 @font-face {
-  font-family: 'aleo';
+  font-family: 'Aleo';
   src: url('../font/aleo/aleo-light-webfont.eot');
   src: url('../font/aleo/aleo-light-webfont.eot?#iefix') format('embedded-opentype'),
-     url('../font/aleo/aleo-light-webfont.woff') format('woff'),
-     url('../font/aleo/aleo-light-webfont.ttf') format('truetype'),
-     url('../font/aleo/aleo-light-webfont.svg#aleolight') format('svg');
+    url('../font/aleo/aleo-light-webfont.woff') format('woff'),
+    url('../font/aleo/aleo-light-webfont.ttf') format('truetype'),
+    url('../font/aleo/aleo-light-webfont.svg#aleolight') format('svg');
   font-weight: 300;
   font-style: normal;
 }
 
 /* Light Italic */
 @font-face {
-  font-family: 'aleo';
+  font-family: 'Aleo';
   src: url('../font/aleo/aleo-lightitalic-webfont.eot');
   src: url('../font/aleo/aleo-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-     url('../font/aleo/aleo-lightitalic-webfont.woff') format('woff'),
-     url('../font/aleo/aleo-lightitalic-webfont.ttf') format('truetype'),
-     url('../font/aleo/aleo-lightitalic-webfont.svg#aleolightitalic') format('svg');
+    url('../font/aleo/aleo-lightitalic-webfont.woff') format('woff'),
+    url('../font/aleo/aleo-lightitalic-webfont.ttf') format('truetype'),
+    url('../font/aleo/aleo-lightitalic-webfont.svg#aleolightitalic') format('svg');
   font-weight: 300;
   font-style: italic;
 }
